src/test/deca/syntax/invalid/lexer/circular_include.deca
// Description :
//    Testing include with a non existent file
//
// Result:
//    Circular include for file \(.\)\+
//    line 8

#include "circular_include.deca"